Add local docker compose file; Create RecipeMapper