@@ -1,5 +1,6 @@
 package de.bach.recipeProvider.controller;
 
+import de.bach.recipeProvider.mapper.RecipeMapper;
 import de.bach.recipeProvider.mongodb.model.Amount;
 import de.bach.recipeProvider.mongodb.model.LabelEnum;
 import de.bach.recipeProvider.mongodb.model.Recipe;
@@ -12,6 +13,8 @@ import org.openapitools.api.RecipesApi;
 import org.openapitools.model.AmountDto;
 import org.openapitools.model.RecipeReadDto;
 import org.openapitools.model.RecipeWriteDto;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -24,13 +27,13 @@ import java.util.stream.Collectors;
 @RestController
 public class RecipeProviderController implements RecipesApi {
 
-    private static long time;
+    private static final Logger log = LoggerFactory.getLogger(RecipeProviderController.class);
 
-    private OpenAiRecipeGeneratorService openAiRecipeGeneratorService;
-    private RecipesRepository recipesRepository;
+    private final OpenAiRecipeGeneratorService openAiRecipeGeneratorService;
+
+    private final RecipesRepository recipesRepository;
 
     private static RecipeReadDto firstRecipe;
-
     private static RecipeReadDto secondRecipe;
 
     public RecipeProviderController(
@@ -54,136 +57,56 @@ public class RecipeProviderController implements RecipesApi {
     @Override
     public ResponseEntity<List<RecipeReadDto>> getAllRecipes() {
         List<Recipe> recipes = recipesRepository.findAll();
-        List<RecipeReadDto> recipeReadDtos = recipes.stream().map(recipe ->
-                        new RecipeReadDto()
-                                .id(recipe.id)
-                                .title(recipe.title)
-                                .subtitle(recipe.subtitle)
-                                .labels(recipe.getLabels()
-                                        .stream()
-                                        .map(labelEnum -> RecipeReadDto.LabelsEnum.fromValue(labelEnum.getValue())).collect(Collectors.toList()))
-                                .duration(recipe.duration)
-                                .image(recipe.image)
-                                .nutrients(recipe
-                                        .getNutrients()
-                                        .stream()
-                                        .map(amount -> new AmountDto()
-                                                .name(amount.getName())
-                                                .amount(amount.getAmount())
-                                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                                        .collect(Collectors.toList()))
-                                .preparation(recipe.getPreparation())
-                                .ingredients(recipe
-                                        .getIngredients()
-                                        .stream()
-                                        .map(amount -> new AmountDto()
-                                                .name(amount.getName())
-                                                .amount(amount.getAmount())
-                                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                                        .collect(Collectors.toList())))
+        List<RecipeReadDto> recipeReadDtos = recipes.stream()
+                .map(RecipeMapper::toRecipeReadDto)
                 .collect(Collectors.toList());
         return ResponseEntity.ok(recipeReadDtos);
     }
 
     @Override
     public ResponseEntity<List<RecipeReadDto>> createRecipes(List<@Valid RecipeWriteDto> recipeWriteDtos) {
-        return ResponseEntity.ok(recipeWriteDtos.stream().map(this::createRecipe).collect(Collectors.toList()));
+        List<Recipe> recipes = recipesRepository.saveAll(recipeWriteDtos.stream().map(RecipeMapper::toRecipe).toList());
+        return ResponseEntity.ok(recipes.stream().map(RecipeMapper::toRecipeReadDto).toList());
     }
 
     @Override
     public ResponseEntity<RecipeReadDto> deleteRecipeById(String id) {
         Recipe recipe = this.recipesRepository.findById(new ObjectId(id)).get();
         this.recipesRepository.deleteById(new ObjectId(id));
-        RecipeReadDto recipeReadDto = new RecipeReadDto()
-                .id(recipe.id)
-                .title(recipe.title)
-                .subtitle(recipe.subtitle)
-                .labels(recipe.getLabels()
-                        .stream()
-                        .map(labelEnum -> RecipeReadDto.LabelsEnum.fromValue(labelEnum.getValue())).collect(Collectors.toList()))
-                .duration(recipe.duration)
-                .image(recipe.image)
-                .nutrients(recipe
-                        .getNutrients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                        .collect(Collectors.toList()))
-                .preparation(recipe.getPreparation())
-                .ingredients(recipe
-                        .getIngredients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name()))).collect(Collectors.toList()));
-        return ResponseEntity.ok(recipeReadDto);
+        return ResponseEntity.ok( RecipeMapper.toRecipeReadDto(recipe));
     }
 
     @Override
     public ResponseEntity<RecipeReadDto> getRecipeById(String id) {
         Recipe recipe = this.recipesRepository.findById(new ObjectId(id)).get();
-        RecipeReadDto recipeReadDto = new RecipeReadDto()
-                .id(recipe.id)
-                .title(recipe.title)
-                .subtitle(recipe.subtitle)
-                .labels(recipe.getLabels()
-                        .stream()
-                        .map(labelEnum -> RecipeReadDto.LabelsEnum.fromValue(labelEnum.getValue())).collect(Collectors.toList()))
-                .duration(recipe.duration)
-                .image(recipe.image)
-                .nutrients(recipe
-                        .getNutrients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                        .collect(Collectors.toList()))
-                .preparation(recipe.getPreparation())
-                .ingredients(recipe
-                        .getIngredients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name()))).collect(Collectors.toList()));
-        return ResponseEntity.ok(recipeReadDto);
+        return ResponseEntity.ok(RecipeMapper.toRecipeReadDto(recipe));
     }
 
     @Override
     public ResponseEntity<List<RecipeReadDto>> getActualMenu(Boolean random) {
         if (RecipeProviderController.firstRecipe == null && RecipeProviderController.secondRecipe == null || random) {
-
+           // List<String> recipesTitlesInDatabase = recipesRepository.findAll().stream().map(Recipe::getTitle).toList();
             try {
                 String recipePrompt = """
-                Generate a random healthy, delicious and varied recipe with vegetarian, beef, chicken or fish as ingredients.
+                Generate a random delicious and varied recipe.
+                Please not only vegetarian. Use also beef, chicken or fish as ingredients.
                 Use for example thermomix or airfryer in your generated recipe.
-                Use also the german home cooking recipes such as "Gulasch", "Frikassee", "Rouladen" or "Bouletten".
+                Do not repeat the following dishes:
                 """;
-                String childrenRecipePrompt = "Generate a random healthy, delicious and varied recipe special for children.";
-                RecipeProviderController.firstRecipe = this.openAiRecipeGeneratorService.generateRecipe(recipePrompt);
-                RecipeProviderController.secondRecipe = this.openAiRecipeGeneratorService.generateRecipe(childrenRecipePrompt);
+                String childrenRecipePrompt = """
+                Generate a random delicious and varied recipe special for children.
+                Please not only vegetarian. Use also beef, chicken or fish as ingredients.
+                Do not repeat the following dishes:
+                """;
+                RecipeWriteDto firstWriteDto = this.openAiRecipeGeneratorService.generateRecipe(recipePrompt);
+                RecipeWriteDto secondWriteDto  = this.openAiRecipeGeneratorService.generateRecipe(childrenRecipePrompt);
+                List<Recipe> recipes = recipesRepository.saveAll(List.of(RecipeMapper.toRecipe(firstWriteDto) ,RecipeMapper.toRecipe(secondWriteDto)));
+                RecipeProviderController.firstRecipe = RecipeMapper.toRecipeReadDto(recipes.get(0));
+                RecipeProviderController.secondRecipe = RecipeMapper.toRecipeReadDto(recipes.get(1));
+                return ResponseEntity.ok(List.of(RecipeProviderController.firstRecipe, RecipeProviderController.secondRecipe));
             } catch (Exception e) {
                 return ResponseEntity.badRequest().build();
             }
-           /*
-            List<Recipe> recipes = recipesRepository.findAll();
-            Random r = new Random();
-            int randomIndex = r.nextInt(recipes.size());
-            final Recipe firstRecipe = recipes.get(randomIndex);
-
-            recipes = recipes.stream().filter(recipe -> !recipe.id.equals(firstRecipe.id)).collect(Collectors.toList());
-            randomIndex = r.nextInt(recipes.size());
-            Recipe secondRecipe = recipes.get(randomIndex);
-
-            RecipeProviderController.firstRecipe = createReadDto(firstRecipe);
-            RecipeProviderController.secondRecipe = createReadDto(secondRecipe);
-            */
-
-            return ResponseEntity.ok(List.of(RecipeProviderController.firstRecipe, RecipeProviderController.secondRecipe));
         }
         return ResponseEntity.ok(List.of(RecipeProviderController.firstRecipe, RecipeProviderController.secondRecipe));
     }
@@ -196,91 +119,5 @@ public class RecipeProviderController implements RecipesApi {
         firstRecipe = recipeReadDto.get(0);
         secondRecipe = recipeReadDto.get(1);
         return ResponseEntity.ok(List.of(firstRecipe, secondRecipe));
-    }
-
-    private RecipeReadDto createRecipe(RecipeWriteDto recipeWriteDto) {
-        Recipe recipe = new Recipe(
-                recipeWriteDto.getTitle(),
-                recipeWriteDto.getSubtitle(),
-                recipeWriteDto.getLabels()
-                        .stream()
-                        .map(labelsEnum -> LabelEnum.valueOf(labelsEnum.name()))
-                        .collect(Collectors.toList()),
-                recipeWriteDto.getDuration(),
-                recipeWriteDto.getImage(),
-                recipeWriteDto
-                        .getIngredients()
-                        .stream()
-                        .map(amountDto -> new Amount(amountDto.getName(), amountDto.getAmount(), UnitEnum.valueOf(amountDto.getUnit().name())))
-                        .collect(Collectors.toList()),
-                recipeWriteDto
-                        .getNutrients()
-                        .stream()
-                        .map(amountDto -> new Amount(amountDto.getName(), amountDto.getAmount(), UnitEnum.valueOf(amountDto.getUnit().name())))
-                        .collect(Collectors.toList()),
-                recipeWriteDto.getPreparation());
-        recipe = recipesRepository.save(recipe);
-
-        RecipeReadDto recipeReadDto = new RecipeReadDto()
-                .id(recipe.id)
-                .title(recipe.title)
-                .subtitle(recipe.subtitle)
-                .labels(recipe.getLabels()
-                        .stream()
-                        .map(labelEnum -> RecipeReadDto.LabelsEnum.fromValue(labelEnum.getValue())).collect(Collectors.toList()))
-                .duration(recipe.duration)
-                .image(recipe.image)
-                .nutrients(recipe
-                        .getNutrients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                        .collect(Collectors.toList()))
-                .preparation(recipe.getPreparation())
-                .ingredients(recipe
-                        .getIngredients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name()))).collect(Collectors.toList()));
-        return recipeReadDto;
-    }
-
-    private RecipeReadDto createReadDto(Recipe recipe) {
-        RecipeReadDto recipeReadDto = new RecipeReadDto();
-
-        recipeReadDto.id(recipe.id);
-        recipeReadDto.title(recipe.title);
-        recipeReadDto.subtitle(recipe.subtitle);
-        recipeReadDto.labels(recipe.getLabels()
-                .stream()
-                .map(labelEnum -> RecipeReadDto.LabelsEnum.fromValue(labelEnum.getValue())).collect(Collectors.toList()));
-        recipeReadDto.duration(recipe.duration);
-        recipeReadDto.image(recipe.image);
-        recipeReadDto
-                .ingredients(recipe
-                        .getIngredients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                        .collect(Collectors.toList()));
-        recipeReadDto.preparation(recipe.getPreparation());
-        recipeReadDto
-                .nutrients(recipe
-                        .getNutrients()
-                        .stream()
-                        .map(amount -> new AmountDto()
-                                .name(amount.getName())
-                                .amount(amount.getAmount())
-                                .unit(AmountDto.UnitEnum.valueOf(amount.getUnitEnum().name())))
-                        .collect(Collectors.toList()));
-        recipeReadDto.preparation(recipe.getPreparation());
-        return recipeReadDto;
-
     }
 }
